[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Mushroom_Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/LazyHamsters-tiny-mushroom.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=84]
height = 1.0

[sub_resource type="Animation" id=86]
resource_name = "Idle"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=87]
resource_name = "Jump"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1.03526 ),
"update": 1,
"values": [ 3, 5, 6, 7, 8, 10, 11, 12, 13, 14 ]
}

[sub_resource type="CircleShape2D" id=88]
radius = 16.0312

[node name="Mushroom_Enemy" type="KinematicBody2D" groups=["enemy", "killplayer"]]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 6 )
shape = SubResource( 84 )

[node name="LeftWall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -14, 16 )

[node name="RightWall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 11, 16 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.5, 1 )
scale = Vector2( 1.07143, 1.07143 )
texture = ExtResource( 2 )
hframes = 33
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 86 )
anims/Jump = SubResource( 87 )

[node name="Detect_Other_Enemy" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_Other_Enemy"]
position = Vector2( -1, 3.5 )
shape = SubResource( 88 )

[connection signal="body_entered" from="Detect_Other_Enemy" to="." method="_on_Detect_Other_Enemy_body_entered"]
